syntax = "proto3";

package proto;

option go_package = "./;proto";

import "google/protobuf/timestamp.proto";

service Orders {
    rpc Create(CreateOrderRequest) returns  (CreateOrderResponse);
    rpc GetByUserID(GetOrderByIDRequest) returns (OrderArray);
    rpc GetByID(GetOrderByIDRequest) returns (Order);
    rpc ChangeStatus(ChangeStatusRequest) returns (CreateOrderResponse);
    rpc GetByUserIDAndStatus(GetOrderByUserIDAndStatusRequest) returns (OrderArray);
}

message CreateOrderRequest {
    string book_id = 1;
    uint64 user_id = 2;
}

message CreateOrderResponse {
    uint64 id = 1;
}

message Order { 
    uint64 id = 1;
    string book_id = 2;
    uint64 user_id = 3;
    google.protobuf.Timestamp added_at = 4;
    string status  = 5;
}

message OrderArray {
    repeated Order oo = 1;
}

message GetOrderByIDRequest {
    uint64 id = 1;
}

message GetOrderByUserIDRequest {
    uint64 user_id = 1;
}

message ChangeStatusRequest {
    uint64 id = 1;
    string status = 2;
}

message GetOrderByUserIDAndStatusRequest {
    uint64 user_id = 1;
    string status = 2;
}